syntax = "proto3";
package proto;

option go_package = "github.com/ferza17/ecommerce-microservices-v2/api-gateway/model/rpc/pb";
import "userMessage.proto";

service UserService {
  rpc FindUserById(FindUserByIdRequest) returns (User);
  rpc FindUserByEmailAndPassword(FindUserByEmailAndPasswordRequest) returns (User);
  rpc  CreateUser(CreateUserRequest) returns (CreateUserResponse);
}